Update layer conf file and examples

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -4,7 +4,7 @@ BBPATH .= ":${LAYERDIR}"
 # We have a recipes directory, add to BBFILES
 BBFILES += "${LAYERDIR}/recipes*/*/*.bb ${LAYERDIR}/recipes*/*/*.bbappend"
 
-BBFILE_COLLECTIONS += "meta-srtg-systemd"
-BBFILE_PATTERN_meta-srtg-systemd := "^${LAYERDIR}/"
-BBFILE_PRIORITY_meta-srtg-systemd = "16"
+BBFILE_COLLECTIONS += "meta-duovero"
+BBFILE_PATTERN_meta-duovero := "^${LAYERDIR}/"
+BBFILE_PRIORITY_meta-duovero = "16"
 
