--- a/recipes-connectivity/hostapd/hostap-daemon-2.0/duovero-hostapd.conf
+++ b/recipes-connectivity/hostapd/hostap-daemon-2.0/duovero-hostapd.conf
@@ -1,8 +1,8 @@
 interface=uap0
 driver=nl80211
-channel=2
-ssid=ShadowX
+channel=7
+ssid=<your-ssid>
 ignore_broadcast_ssid=1
 wpa=3
-wpa_passphrase=srt!4101
+wpa_passphrase=<your-passphrase>
 rsn_pairwise=CCMP
