Cleanup config files for access point

--- a/recipes-connectivity/hostapd/hostap-daemon-2.0/duovero-hostapd.conf
+++ b/recipes-connectivity/hostapd/hostap-daemon-2.0/duovero-hostapd.conf
@@ -1,8 +1,8 @@
 interface=uap0
 driver=nl80211
 channel=7
-ssid=<your-ssid>
-ignore_broadcast_ssid=1
+ssid=duovero
+ignore_broadcast_ssid=0
 wpa=3
-wpa_passphrase=<your-passphrase>
+wpa_passphrase=duovero-secret
 rsn_pairwise=CCMP
