--- a/recipes-connectivity/dhcp/files/dhcpd.conf
+++ b/recipes-connectivity/dhcp/files/dhcpd.conf
@@ -1,21 +1,25 @@
 #
 # Sample configuration file for ISC dhcpd 
 #
+# Don't forget semi-colons at line end
+#
 
 ddns-update-style none;
 
-option domain-name "srtg.test";
-#option domain-name-servers ns1.example.org, ns2.example.org;
+option domain-name "jumpnow";
+
+# comma separated list of servers
+option domain-name-servers 192.168.10.2;
 
 # make uap0 the gateway for clients 
-option routers 192.168.40.1;
+option routers 192.168.5.1;
 
 default-lease-time 600;
 max-lease-time 7200;
 
 authoritative;
 
-subnet 192.168.40.0 netmask 255.255.255.0 {
-  range 192.168.40.100 192.168.40.120;
+subnet 192.168.5.0 netmask 255.255.255.0 {
+  range 192.168.5.100 192.168.5.120;
 }
 
