--- a/recipes-kernel/linux/linux-stable-4.9/dts/duovero-spi1-spidev.dtsi
+++ b/recipes-kernel/linux/linux-stable-4.9/dts/duovero-spi1-spidev.dtsi
@@ -25,7 +25,7 @@
 	pinctrl-0 = <&mcspi1_pins>;
 
 	spidev1_0: spidev1@0 {
-		compatible = "generic,spi";
+		compatible = "spidev";
 		reg = <0>;
 		spi-max-frequency = <12000000>;
 		/* spi-cpha; sets CPHA=1, default is CPHA=0 */
@@ -34,13 +34,13 @@
 	};
 
 	spidev1_1: spidev1@1 {
-		compatible = "generic,spi";
+		compatible = "spidev";
 		reg = <1>;
 		spi-max-frequency = <12000000>;
 	};
 
 	spidev1_2: spidev1@2 {
-		compatible = "generic,spi";
+		compatible = "spidev";
 		reg = <2>;
 		spi-max-frequency = <12000000>;
 	};
