--- a/recipes-kernel/linux/linux-stable-4.9/dts/duovero-spi4-spidev.dtsi
+++ b/recipes-kernel/linux/linux-stable-4.9/dts/duovero-spi4-spidev.dtsi
@@ -23,7 +23,7 @@
 	pinctrl-0 = <&mcspi4_pins>;
 
 	spidev4_0: spidev4@0 {
-		compatible = "generic,spi";
+		compatible = "spidev";
 		reg = <0>;
 		spi-max-frequency = <12000000>;
 		/* spi-cpha; sets CPHA=1, default is CPHA=0 */
