--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -1,5 +1,5 @@
 # Local configuration for meta-duovero images
-# Yocto Project 2.2.1 Poky distribution [morty] branch
+# Yocto Project 2.3 Poky distribution [pyro] branch
 # This is a sysvinit system
 
 LICENSE_FLAGS_WHITELIST = "commercial"
@@ -13,15 +13,15 @@ PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
 PREFERRED_PROVIDER_udev = "eudev"
 VIRTUAL_RUNTIME_init_manager = "sysvinit"
 
-PREFERRED_VERSION_linux-stable = "4.4.%"
+PREFERRED_VERSION_linux-stable = "4.9.%"
 
 MACHINE = "duovero"
 
 #DL_DIR = "${HOME}/oe-sources"
 
-#SSTATE_DIR = "/oe6/duo/sstate-cache"
+#SSTATE_DIR = "/oe7/duo/sstate-cache"
 
-#TMPDIR = "/oe6/duo/tmp-morty"
+#TMPDIR = "/oe7/duo/tmp-pyro"
 
 DISTRO = "poky"
 
