--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -13,15 +13,15 @@ PREFERRED_PROVIDER_jpeg = "libjpeg-turbo"
 PREFERRED_PROVIDER_udev = "eudev"
 VIRTUAL-RUNTIME_init_manager = "sysvinit"
 
-#PREFERRED_VERSION_linux-stable = "4.14.%"
-
 MACHINE = "duovero"
+
+KERNEL_DEVICETREE = "omap4-duovero-parlor.dtb"
 
 #DL_DIR = "${HOME}/oe-sources"
 
-#SSTATE_DIR = "/oe7/duo/sstate-cache"
+#SSTATE_DIR = "/oe9/duo/sstate-cache"
 
-#TMPDIR = "/oe7/duo/tmp-rocko"
+#TMPDIR = "/oe9/duo/tmp-rocko"
 
 DISTRO = "poky"
 
