--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 *~
 scripts/wpa_supplicant.conf
 scripts/interfaces
+recipes-mender/mender/files/artifact-verify-key.pem
+recipes-mender/mender/files/server.crt
