--- a/conf/bblayers.conf.sample
+++ b/conf/bblayers.conf.sample
@@ -6,10 +6,10 @@ BBPATH = "${TOPDIR}"
 BBFILES ?= ""
 
 BBLAYERS ?= " \
-  ${HOME}/poky-rocko/meta \
-  ${HOME}/poky-rocko/meta-poky \
-  ${HOME}/poky-rocko/meta-openembedded/meta-oe \
-  ${HOME}/poky-rocko/meta-openembedded/meta-networking \
-  ${HOME}/poky-rocko/meta-openembedded/meta-python \
+  ${HOME}/poky-sumo/meta \
+  ${HOME}/poky-sumo/meta-poky \
+  ${HOME}/poky-sumo/meta-openembedded/meta-oe \
+  ${HOME}/poky-sumo/meta-openembedded/meta-networking \
+  ${HOME}/poky-sumo/meta-openembedded/meta-python \
   ${HOME}/duovero/meta-duovero \
-  "
+"
