Replace deprecated SERIAL_CONSOLE with SERIAL_CONSOLES

--- a/conf/machine/duovero.conf
+++ b/conf/machine/duovero.conf
@@ -23,7 +23,7 @@ BOOTENV_SIZE = "0x20000"
 
 EXTRA_IMAGEDEPENDS += "u-boot"
 
-SERIAL_CONSOLE = "115200 ttyO2"
+SERIAL_CONSOLES = "115200;ttyO2"
 
 IMAGE_FSTYPES = "tar.xz"
 
