Upgrade to zeus

--- a/conf/bblayers.conf.sample
+++ b/conf/bblayers.conf.sample
@@ -6,10 +6,12 @@ BBPATH = "${TOPDIR}"
 BBFILES ?= ""
 
 BBLAYERS ?= " \
-  ${HOME}/poky-warrior/meta \
-  ${HOME}/poky-warrior/meta-poky \
-  ${HOME}/poky-warrior/meta-openembedded/meta-oe \
-  ${HOME}/poky-warrior/meta-openembedded/meta-networking \
-  ${HOME}/poky-warrior/meta-openembedded/meta-python \
+  ${HOME}/poky-zeus/meta \
+  ${HOME}/poky-zeus/meta-poky \
+  ${HOME}/poky-zeus/meta-openembedded/meta-oe \
+  ${HOME}/poky-zeus/meta-openembedded/meta-networking \
+  ${HOME}/poky-zeus/meta-openembedded/meta-perl \
+  ${HOME}/poky-zeus/meta-openembedded/meta-python \
+  ${HOME}/poky-zeus/meta-security \
   ${HOME}/duovero/meta-duovero \
 "
