Upgrade to dunfell

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -8,4 +8,4 @@ BBFILE_COLLECTIONS += "meta-duovero"
 BBFILE_PATTERN_meta-duovero := "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-duovero = "16"
 
-LAYERSERIES_COMPAT_meta-duovero = "zeus"
+LAYERSERIES_COMPAT_meta-duovero = "dunfell"
