--- a/conf/machine/duovero.conf
+++ b/conf/machine/duovero.conf
@@ -8,7 +8,7 @@ TARGET_ARCH = "arm"
 DEFAULTTUNE ?= "cortexa9hf-neon"
 
 require conf/machine/include/soc-family.inc
-require conf/machine/include/tune-cortexa9.inc
+require conf/machine/include/arm/armv7a/tune-cortexa9.inc
 
 PREFERRED_PROVIDER_virtual/kernel = "linux-stable"
 KERNEL_IMAGETYPE = "zImage"
@@ -21,7 +21,8 @@ UBOOT_LOADADDRESS = "0x80008000"
 UBOOT_MACHINE = "duovero_config"
 BOOTENV_SIZE = "0x20000"
 
-EXTRA_IMAGEDEPENDS += "u-boot u-boot-scr"
+#EXTRA_IMAGEDEPENDS += "u-boot u-boot-scr"
+EXTRA_IMAGEDEPENDS += "u-boot"
 
 SERIAL_CONSOLES = "115200;ttyO2"
 
