upgrade to kirkstone

--- a/conf/machine/duovero.conf
+++ b/conf/machine/duovero.conf
@@ -21,8 +21,7 @@ UBOOT_LOADADDRESS = "0x80008000"
 UBOOT_MACHINE = "duovero_config"
 BOOTENV_SIZE = "0x20000"
 
-#EXTRA_IMAGEDEPENDS += "u-boot u-boot-scr"
-EXTRA_IMAGEDEPENDS += "u-boot"
+EXTRA_IMAGEDEPENDS += "u-boot u-boot-scr"
 
 SERIAL_CONSOLES = "115200;ttyO2"
 
