--- a/conf/machine/duovero.conf
+++ b/conf/machine/duovero.conf
@@ -27,6 +27,6 @@ SERIAL_CONSOLES = "115200;ttyO2"
 
 IMAGE_FSTYPES = "tar.xz"
 
-MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "kernel-image kernel-devicetree"
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS = "kernel-image kernel-devicetree kernel-modules"
 
 MACHINE_FEATURES = "ext2 serial usbhost vfat"
